# email-index-service

./: .dockerignore  .gitignore  Dockerfile  FUTUREWORK.md  README.md  bootstrap.py  emails.json  main.py  pyproject.toml
config/: base.py
src/: db.py
src/api/: email.py  emails.py  schemas.py  serializers.py  utils.py  v1_emails.py
src/models/: email.py  email_carbon_copy.py
src/profanity_detector/: detector.py
src/profanity_detector_v1/: detector.py
src/profanity_remover/: profanity.py  remover.py
src/profanity_remover_v1/: profanity.py  remover.py
src/repositories/: peewee_sqlite.py  query_filters.py
src/repository/: email.py  peewee_sqlite.py  peewee_sqlite_queryset.py  queryset.py  schemas.py
src/services/: constants.py  email.py  indexer.py  preprocessor.py  schemas.py  search_engine.py  text_search_optimizer.py  utils.py
tests/: conftest.py
tests/api/: test_e2e_email.py  test_e2e_emails.py  test_utils.py  test_v1_emails_import_email.py  test_v1_emails_search.py
tests/api/test_data/: emails.json  payload.json
tests/fixtures/: conftest.py
tests/profanity_detector/: test_profanity_detector.py
tests/profanity_remover/: test_profanity_remover.py
tests/repositories/: test_email.py  test_peewee_sqlite.py
tests/repository/: test_email.py
tests/services/: test_email.py  test_indexer.py  test_search_engine.py  test_utils.py  text_search_optimizer.py
