[tool.poetry]
name = "email-index-service"
version = "0.1.0"
description = "Continua.ai project"
authors = ["lyle"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.104.0"
peewee = "^3.17.0"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
